With --enable-libdeps, library dependency information will be placed into shared libraries.  Not all libraries have the dependency information, and it is not all correct, due to a few circular dependencies.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407927

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -78,6 +78,26 @@ esac
 ]
 )
 
+AC_ARG_ENABLE(deplibs,
+[  --enable-deplibs        Generate Use library dependencies in shared libraries],
+[
+case $enableval in
+  yes)
+    ENABLE_DEPLIBS=yes
+  ;;
+  no)
+    ENABLE_DEPLIBS=no
+  ;;
+  *)
+    AC_MSG_ERROR([Invalid value for --enable-deplibs ($enableval)])
+  ;;
+esac
+],[
+    ENABLE_DEPLIBS=no
+]
+)
+AC_SUBST(ENABLE_DEPLIBS)
+
 enableproduction=no
 AC_ARG_ENABLE(production,
 [  --enable-production     Prepare for a production install.],
