--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -36,6 +36,7 @@ OBJSUF = @OBJSUF@
 LIBSUF = @LIBSUF@
 
 ENABLESHARED = @ENABLESHARED@
+ENABLE_DEPLIBS = @ENABLE_DEPLIBS@
 
 ifeq ($(ENABLESHARED),yes)
   LIBTOOL= $(SHELL) $(TOPDIR)/libtool
