--- a/mpqc/src/lib/chemistry/qc/dft/Makefile
+++ b/mpqc/src/lib/chemistry/qc/dft/Makefile
@@ -47,7 +47,7 @@ default:: $(DEPENDINCLUDE)
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
-LIBS = $(shell $(LISTLIBS) $(INCLUDE) $(SRCDIR)/LIBS.h)
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
 
 dfttest:: dfttest.$(OBJSUF) $(LIBS)
 	$(LTLINK) $(CXX) $(LDFLAGS) -o dfttest $^ $(SYSLIBS) $(LTLINKBINOPTS)
