--- a/mpqc/src/lib/chemistry/qc/intcca/Makefile
+++ b/mpqc/src/lib/chemistry/qc/intcca/Makefile
@@ -60,6 +60,8 @@ DISTFILES = $(INC) Makefile
 
 DEPENDINCLUDE = $(INC) $(GENINC) $(SGENINC)
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 #############################################################
 
 default:: $(DEPENDINCLUDE)
