--- a/mpqc/src/lib/chemistry/qc/intv3/Makefile
+++ b/mpqc/src/lib/chemistry/qc/intv3/Makefile
@@ -58,6 +58,8 @@ DEPENDINCLUDE = $(INC) $(GENINC) $(SGENINC)
 
 TESTPROGS = inttest fjttest
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 #############################################################
 
 default:: $(DEPENDINCLUDE)
