--- a/mpqc/src/lib/chemistry/solvent/Makefile
+++ b/mpqc/src/lib/chemistry/solvent/Makefile
@@ -59,7 +59,7 @@ default:: $(DEPENDINCLUDE)
 
 interface:: $(DEPENDINCLUDE)
 
-LIBS = $(shell $(LISTLIBS) $(INCLUDE) $(SRCDIR)/LIBS.h)
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(SRCDIR)/LIBS.h)
 
 bemtest: $(TESTOBJ) $(LIBS)
 	$(LTLINK) $(LD) $(LDFLAGS) -o bemtest $^ $(SYSLIBS) $(LTLINKBINOPTS)
