--- a/mpqc/src/lib/math/isosurf/Makefile
+++ b/mpqc/src/lib/math/isosurf/Makefile
@@ -53,6 +53,8 @@ TESTPROGS = isotest
 
 DISTFILES = isotest.cc $(CXXSRC) $(CSRC) $(INC) Makefile LIBS.h
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 default:: $(DEPENDINCLUDE)
 
 tmplinst.$(OBJSUF): tmplinst.cc
