--- a/mpqc/src/lib/util/class/Makefile
+++ b/mpqc/src/lib/util/class/Makefile
@@ -47,6 +47,8 @@ DISTFILES = $(CXXSRC) $(INC) Makefile LIBS.h $(TESTCXXSRC)
 
 TESTPROGS = classtest scextest
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 default:: $(DEPENDINCLUDE)
 
 interface:: $(DEPENDINCLUDE)
