--- a/mpqc/src/lib/util/ref/Makefile
+++ b/mpqc/src/lib/util/ref/Makefile
@@ -53,6 +53,8 @@ DISTFILES = Makefile $(INC) LIBS.h $(REALCXXSRC) $(TESTCXX)
 BIN_OR_LIB = LIB
 TARGET_TO_MAKE = libSCref
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 default:: $(DEPENDINCLUDE)
 
 interface:: $(DEPENDINCLUDE)
