--- a/mpqc/src/lib/util/render/Makefile
+++ b/mpqc/src/lib/util/render/Makefile
@@ -55,6 +55,8 @@ TESTPROGS = rentest
 
 DISTFILES = $(CXXSRC) $(INC) Makefile $(TESTSRC) $(TESTFILES)
 
+LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
+
 default:: $(DEPENDINCLUDE)
 
 interface:: $(DEPENDINCLUDE)
