bug fix triggering babel code generation
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407930

--- a/mpqc/src/lib/util/misc/Makefile
+++ b/mpqc/src/lib/util/misc/Makefile
@@ -113,8 +113,9 @@ endif
 # need babel headers generated
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_CCA),yes)
   ifneq ($(DODEPEND),no)
-    include ../../chemistry/cca/.babel-stamp
+    include ../../chemistry/cca/stamp-babel
   endif
 endif
-../../chemistry/cca/.babel-stamp:
-	cd ../../chemistry/cca; $(MAKE) .babel-stamp
+../../chemistry/cca/stamp-babel:
+	cd ../../chemistry/cca; $(MAKE) stamp-babel
+
