added (temporary?) rule to generate libSCchemistry
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407932

--- a/mpqc/src/lib/util/misc/Makefile
+++ b/mpqc/src/lib/util/misc/Makefile
@@ -118,4 +118,6 @@ ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_CCA),yes)
 endif
 ../../chemistry/cca/stamp-babel:
 	cd ../../chemistry/cca; $(MAKE) stamp-babel
+../../../../lib/cca/libSCchemistry.$(LIBSUF):
+	cd ../../chemistry/cca; $(MAKE)
 
