Break up a dependency cycle between util/misc/ccaenv and some of the CCA/Chemistry files.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407936

--- a/mpqc/src/bin/mpqc/Makefile
+++ b/mpqc/src/bin/mpqc/Makefile
@@ -39,6 +39,7 @@ ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_CCA),yes)
   endif
   DEFINES += -DHAVE_CHEMISTRY_CCA -DCCA_PATH=\"$(libdir)/cca\"
   CPPFLAGS += -I../../lib/chemistry/cca
+  CXXSRC += cca.cc
 endif
 
 LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
