fixed typo (ENBABLECCA -> ENABLECCA)
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407937

--- a/mpqc/src/lib/util/misc/Makefile
+++ b/mpqc/src/lib/util/misc/Makefile
@@ -61,7 +61,7 @@ DEPENDINCLUDE = $(INC)
 
 LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
 
-ifeq ($(ENBABLECCA),yes)
+ifeq ($(ENABLECCA),yes)
   CXXSRC += ccaenv.cc
   INC += ccaenv.h
   LTLINKLIBOPTS += -L$(CCAFE_LIB) -R$(CCAFE_LIB) -lccafeCore \
