Updated the rearranged CCA code so it will compile and install, if not work.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407945

--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -103,6 +103,7 @@ MKF77SYM= $(PERL) $(TOPDIR)/bin/mkf77sym.pl
 # first check for generated include files in the machine dependent directories
 # and then for include files in the src directory
 INCLUDE = -I$(TOPDIR)/src/lib -I$(SRCTOPDIR)/include -I$(SRCTOPDIR)/src/lib \
+          -I$(TOPDIR)/src/lib/chemistry/cca/server \
 	  @CPPFLAGS@
 DEFINES = @DEFS@ @EXTRADEFINES@
 
