--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1898,7 +1898,7 @@ if test $components == "yes"; then
     AC_MSG_ERROR([problem with cca-chem-generic headers]) )
 
 else
-  EXCLUDED_DIRS="-x LIB_CCA -x SRC_LIB_CHEMISTRY_CCA -x SRC_LIB_CHEMISTRY_CCA_CLIENT -x SRC_LIB_CHEMISTRY_CCA_INTCCA -x SRC_LIB_CHEMISTRY_CCA_SERVER -x SRC_LIB_CHEMISTRY_CCA_MODULE $EXCLUDED_DIRS"
+  EXCLUDED_DIRS="-x LIB_CCA -x SRC_LIB_CHEMISTRY_CCA -x SRC_LIB_CHEMISTRY_CCA_CLIENT -x SRC_LIB_CHEMISTRY_CCA_INT -x SRC_LIB_CHEMISTRY_CCA_SERVER -x SRC_LIB_CHEMISTRY_CCA_MODULE $EXCLUDED_DIRS"
 fi
 
 dnl --------- Find the list of all sc libraries. ---------
@@ -1923,3 +1923,34 @@ chmod +x bin/sc-config
 chmod +x src/bin/mpqc/mpqcrun
 chmod +x src/bin/mpqc/ccarun
 chmod +x src/bin/mpqc/validate/makeccain.pl
+
+dnl --------- Print out a configuration summary. ---------
+
+echo -e "\nConfiguration Summary:"
+dnl echo -e "Variable\t\tValue"
+echo -e "---------------------------------------------------------------"
+echo -e "Install prefix\t$prefix"
+echo -e "C compiler\t$CC"
+echo -e "C++ compiler\t$CXX"
+echo -e "F77 compiler\t$F77"
+echo -e "DEFAULT_PARALL.\t${DEFAULT_PARALLEL:-<not set>}"
+echo -e "HAVE_PTHREAD\t${HAVE_PTHREAD:-no}"
+echo -en "HAVE_MPI\t${HAVE_MPI:-no}"
+if test "$HAVE_MPI" = yes; then
+  if test "$ALWAYS_USE_MPI" = yes; then
+    echo -en "\t(MPI_Init always called)"
+  fi
+fi
+echo
+echo -e "HAVE_ARMCI\t${HAVE_ARMCI:-no}"
+echo -e "HAVE_LIBINT\t${HAVE_LIBINT:-no}"
+echo -e "HAVE_LIBR12\t${HAVE_LIBR12:-no}"
+echo -e "HAVE_LIBDERIV\t${HAVE_LIBDERIV:-no}"
+echo -e "HAVE_LIBINT2\t${HAVE_LIBINT2:-no}"
+echo -en "components\t${components:-<not set>}"
+if test "$components" = yes; then
+  echo -ne "\t(CCA_CHEM_CONFIG=${CCA_CHEM_CONFIG:-<not set>})"
+fi
+echo
+echo -e "---------------------------------------------------------------"
+
