Do not write the object-specific ccafe input files to the source directory. Retrieve the pErr file from the cca scratch directory. Added missing items to the check_clean rules. Miscellaneous other changes.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407950

--- a/mpqc/src/bin/mpqc/validate/makeccain.pl.in
+++ b/mpqc/src/bin/mpqc/validate/makeccain.pl.in
@@ -2,6 +2,8 @@
 #eval 'exec perl $0 $*'
 #    if 0;
 
+# running from the compiled module does not work
+#$libsc = "@compiledir@/lib/cca";
 $libsc = "@sclibdir@/cca";
 $libgeneric = "@CCA_CHEM_LIB@";
 
@@ -37,7 +39,7 @@ foreach (@ARGV) {
   $full_input_file =~ m/([^\/]*)\/?$/;
   $input_file = $1;
   open INPUT,"<$full_input_file";
-  open OUTPUT,">$dir/$input_file.in";
+  open OUTPUT,">$dir/$input_file.cca";
 
   while (<INPUT>) {
     $line = $_;
