--- a/mpqc/src/bin/mpqc/ccarun.in
+++ b/mpqc/src/bin/mpqc/ccarun.in
@@ -307,10 +307,10 @@ sub jobrunner {
     my $file;
 
     while ( ($file = get_next_file($jobslot)) ne "") {
-        $file =~ s/\.in//;
-        $tmp_out = "$pwd/$outputprefix/$file.tmp";
+        $file =~ s/\.cca//;
+        $tmp_out = "$pwd/$outputprefix/$file.ccatmpdir";
 	$ENV{"CCACHEM_RESULTS_DIR"} = "$tmp_out";
-        my $in = "$inputprefix/$file.in";
+        my $in = "$inputprefix/$file.cca";
         my $cmd = "$launch";
         $cmd =~ s/%CCAFE%/$ccafe/;
         $cmd =~ s/%NPROC%/$nprocperjob/;
@@ -345,7 +345,7 @@ sub jobrunner {
         waitpid($pid,'');
         
         rename "$tmp_out/pOut0", "$pwd/$outputprefix/$file.out";       
-        unlink "$tmp_out/pErr0";
+        rename "$tmp_out/pErr0", "$pwd/$outputprefix/$file.err";
         rename "$tmp_out/results.txt", "$pwd/$outputprefix/$file.results";
         rmdir "$tmp_out";
     }
@@ -359,7 +359,7 @@ sub get_file_list {
         opendir(DIR,"$readdir");
         @tdirfiles = sort(readdir(DIR));
         foreach my $j (@tdirfiles) {
-            if ($j =~ /\.in$/) {
+            if ($j =~ /\.cca$/) {
                 $dirfiles[$#dirfiles+1] = $j;
             }
         }
