The ccafe_... tests now work with ca-tools-0.6.0_rc2.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407952

--- a/mpqc/src/lib/chemistry/cca/server/Makefile
+++ b/mpqc/src/lib/chemistry/cca/server/Makefile
@@ -39,6 +39,7 @@ CLIENT_OR_SERVER = server
 BABEL_PACKAGES = MPQC
 
 BABEL_CLASSES = \
+  MPQC.CCAException \
   MPQC.Chemistry_MoleculeViewer \
   MPQC.Chemistry_QC_Model \
   MPQC.Chemistry_QC_ModelFactory \
