Give a "default" target first, otherwise the default will be "install".
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407958

--- a/mpqc/lib/cca/Makefile
+++ b/mpqc/lib/cca/Makefile
@@ -7,6 +7,8 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 
 FILES = $(shell echo `find repo`) 
 
+default::
+
 install:: components.cca
 	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(libdir)/cca
 	$(INSTALL) $(INSTALLIBOPT) components.cca $(installroot)$(libdir)/cca
