don't try to build module unless shared libs are built
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407959

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -6,7 +6,10 @@ endif
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(TOPDIR)/lib/Makedirlist
 
-SUBDIRS = client int server module
+SUBDIRS = client int server 
+ifeq ($(ENABLESHARED),yes)
+  SUBDIRS += module
+endif
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalSubDirs
 
