modified test inputs for cca superfactory approach, all tests pass excluding cints tests (CintsEvaluatorFactory doesn't exist yet)
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407967

--- a/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2varray.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2varray.in
@@ -19,8 +19,7 @@ basis<GaussianBasisSet>: (
 % using cca integrals
 integrals<IntegralCCA>: (
   integral_buffer = array
-  default_package = cints
-  evaluator_factory = MPQC.IntegralEvaluatorFactory
+  default_subfactory = MPQC.CintsEvaluatorFactory
   molecule = $:molecule
 )
 mpqc: (
