--- a/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2vopaque.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2vopaque.in
@@ -19,8 +19,7 @@ basis<GaussianBasisSet>: (
 % using cca integrals
 integrals<IntegralCCA>: (
   integral_buffer = opaque
-  default_package = cints
-  evaluator_factory = MPQC.IntegralEvaluatorFactory
+  default_subfactory = MPQC.CintsEvaluatorFactory
   molecule = $:molecule
 )
 mpqc: (
