--- a/mpqc/src/lib/chemistry/qc/basis/Makefile
+++ b/mpqc/src/lib/chemistry/qc/basis/Makefile
@@ -43,7 +43,7 @@ CXXSRC = gaussbas.cc gaussshell.cc files.cc \
          symmint.cc tbint.cc dercent.cc \
          sobasis.cc sointegral.cc extent.cc orthog.cc \
          gpetite.cc distshpair.cc intparams.cc intdescr.cc \
-         uncontract.cc
+         uncontract.cc split.cc
 
 INC = basis.h gaussbas.h guassshell.h files.h \
       cartiter.h transform.h shellrot.h \
