when checking for proper integral factory, IntegralCCA is also OK
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407992

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -31,6 +31,7 @@ ifndef SRCDIR
 endif
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
+include $(TOPDIR)/lib/Makedirlist
 
 TARGET_TO_MAKE = libSCmbptr12
 BIN_OR_LIB = LIB
@@ -60,6 +61,10 @@ CXXSRCS = mbptr12.cc \
 
 ifeq ($(HAVE_MPIIO),yes)
   CXXSRCS += r12ia_mpiiofile.cc
+endif
+
+ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_CCA),yes)
+  DEFINES += -DHAVE_CHEMISTRY_CCA
 endif
 
 LIBOBJ= $(CXXSRCS:%.cc=%.$(OBJSUF)) $(CSRCS:%.c=%.$(OBJSUF))
