added option for intv3 order, began eliminating dependence on cca-spec-classic
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408025

--- a/mpqc/src/lib/chemistry/cca/int/Makefile
+++ b/mpqc/src/lib/chemistry/cca/int/Makefile
@@ -43,7 +43,7 @@ BIN_OR_LIB = LIB
 
 DEFINES += -DDMALLOC
 
-CXXSRC = obintcca.cc tbintcca.cc intcca.cc
+CXXSRC = obintcca.cc tbintcca.cc intcca.cc auxintv3.cc
 
 INC = obintcca.h tbintcca.h intcca.h cartit.h tform.h
 
