--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1637,20 +1637,23 @@ AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 AC_CHECK_HEADERS(libint2/libint2.h,
   AC_MSG_CHECKING([for libint2_static_init in -lint2])
-  AC_COMPILE_IFELSE(
+  REF_LIBS=$LIBS  LIBS="-lint2 $LIBS"
+  AC_LINK_IFELSE(
     AC_LANG_PROGRAM(
       [[#include <libint2/libint2.h>
       ]],
       [[
         void (*funcptr)() = LIBINT2_PREFIXED_NAME(libint2_static_init);
+        funcptr();
       ]]
       ),
     HAVE_LIBINT2=yes
     AC_DEFINE(HAVE_LIBINT2)
     AC_SUBST(HAVE_LIBINT2)
-    LIBS="-lint2 $LIBS"
+    REF_LIBS="-lint2 $LIBS"
     AC_MSG_RESULT([yes])
     )
+  LIBS=$REF_LIBS
   AC_MSG_CHECKING([if libint2 can compute ERI])
   AC_COMPILE_IFELSE(
     AC_LANG_PROGRAM(
