switched ccaintv3 tests from "energy" to "opt" to ensure gradients are thoroughly tested
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408045

--- a/mpqc/src/bin/mpqc/validate/ref/ccaintv3_scfccpvtzc2voptarray.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccaintv3_scfccpvtzc2voptarray.in
@@ -13,7 +13,7 @@ molecule<Molecule>: (
 )
 % basis set specification
 basis<GaussianBasisSet>: (
-  name = "STO-3G"
+  name = "cc-pVTZ"
   molecule = $:molecule
 )
 % using cca integrals
@@ -47,7 +47,7 @@ mpqc: (
     multiplicity = 1
     print_npa = yes
   )
-  optimize = no
+  optimize = yes
   % optimizer object for the molecular geometry
   opt<QNewtonOpt>: (
     max_iterations = 20
