Fix a bug that prevented sc-config from listing the correct libraries.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408068

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1910,7 +1910,7 @@ fi
 
 dnl --------- Find the list of all sc libraries. ---------
 
-SCLIBS=`$PERL $srcdir/bin/listlibs.pl -I$srcdir/src/lib -DLIBSUF=$LIBSUF $srcdir/src/lib`
+SCLIBS=`$PERL $srcdir/bin/listlibs.pl -I./src/lib -I$srcdir/src/lib -DLIBSUF=$LIBSUF $srcdir/src/lib`
 AC_SUBST(SCLIBS)
 
 dnl --------- Define the library directory macros. ---------
